Buton conectare plc

--- a/Trasabilitate/Trasabilitate.csproj
+++ b/Trasabilitate/Trasabilitate.csproj
@@ -8,4 +8,8 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="S7netplus" Version="0.20.0" />
+  </ItemGroup>
+
 </Project>
